--- a/pom.xml
+++ b/pom.xml
@@ -51,6 +51,14 @@
             <version>${hessian.version}</version>
         </dependency>
 
+        <!-- https://mvnrepository.com/artifact/com.esotericsoftware/kryo -->
+        <dependency>
+            <groupId>com.esotericsoftware</groupId>
+            <artifactId>kryo</artifactId>
+            <version>${kryo.version}</version>
+        </dependency>
+
+
     </dependencies>
 
     <properties>
@@ -60,6 +68,7 @@
         <slf4j.version>2.0.6</slf4j.version>
         <curator.version>5.1.0</curator.version>
         <hessian.version>4.0.63</hessian.version>
+        <kryo.version>5.4.0</kryo.version>
 
         <maven.compiler.source>8</maven.compiler.source>
         <maven.compiler.target>8</maven.compiler.target>
