--- a/pom.xml
+++ b/pom.xml
@@ -58,6 +58,21 @@
             <version>${kryo.version}</version>
         </dependency>
 
+        <!-- https://mvnrepository.com/artifact/io.protostuff/protostuff-runtime -->
+        <dependency>
+            <groupId>io.protostuff</groupId>
+            <artifactId>protostuff-runtime</artifactId>
+            <version>${protostuff.version}</version>
+        </dependency>
+
+        <!-- https://mvnrepository.com/artifact/io.protostuff/protostuff-core -->
+        <dependency>
+            <groupId>io.protostuff</groupId>
+            <artifactId>protostuff-core</artifactId>
+            <version>1.8.0</version>
+        </dependency>
+
+
 
     </dependencies>
 
@@ -69,6 +84,7 @@
         <curator.version>5.1.0</curator.version>
         <hessian.version>4.0.63</hessian.version>
         <kryo.version>5.4.0</kryo.version>
+        <protostuff.version>1.8.0</protostuff.version>
 
         <maven.compiler.source>8</maven.compiler.source>
         <maven.compiler.target>8</maven.compiler.target>
