--- a/pom.xml
+++ b/pom.xml
@@ -91,7 +91,7 @@
         <hessian.version>4.0.63</hessian.version>
         <kryo.version>5.4.0</kryo.version>
         <protostuff.version>1.8.0</protostuff.version>
-        <spring.version>6.0.6</spring.version>
+        <spring.version>5.2.7.RELEASE</spring.version>
 
         <maven.compiler.source>8</maven.compiler.source>
         <maven.compiler.target>8</maven.compiler.target>
