--- a/service-api/pom.xml
+++ b/service-api/pom.xml
@@ -9,7 +9,7 @@
         <version>1.0-SNAPSHOT</version>
     </parent>
 
-    <artifactId>serviceApi</artifactId>
+    <artifactId>service-api</artifactId>
 
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
