--- a/rpc-common/pom.xml
+++ b/rpc-common/pom.xml
@@ -3,28 +3,15 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
+    <parent>
+        <groupId>org</groupId>
+        <artifactId>rpc</artifactId>
+        <version>1.0-SNAPSHOT</version>
+    </parent>
 
-    <groupId>org</groupId>
-    <artifactId>rpc</artifactId>
-    <version>1.0-SNAPSHOT</version>
-    <packaging>pom</packaging>
-    <modules>
-        <module>server</module>
-        <module>service-api</module>
-        <module>client</module>
-        <module>rpc-framework-simple</module>
-        <module>rpc-common</module>
-    </modules>
-
-    <dependencies>
-        <!-- https://mvnrepository.com/artifact/org.projectlombok/lombok -->
-
-
-
-    </dependencies>
+    <artifactId>rpc-common</artifactId>
 
     <properties>
-
         <maven.compiler.source>8</maven.compiler.source>
         <maven.compiler.target>8</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
