--- a/pom.xml
+++ b/pom.xml
@@ -31,9 +31,15 @@
             <version>${guava.version}</version>
         </dependency>
 
+        <!-- log -->
         <dependency>
             <groupId>org.slf4j</groupId>
-            <artifactId>slf4j-log4j12</artifactId>
+            <artifactId>slf4j-api</artifactId>
+            <version>${slf4j.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-simple</artifactId>
             <version>${slf4j.version}</version>
         </dependency>
 
@@ -45,7 +51,7 @@
         <maven.compiler.target>1.8</maven.compiler.target>
         <checkstyle-maven-plugin.version>3.1.1</checkstyle-maven-plugin.version>
 
-        <slf4j.version>2.0.6</slf4j.version>
+        <slf4j.version>1.7.25</slf4j.version>
         <guava.version>30.1.1-jre</guava.version>
         <maven.compiler.source>8</maven.compiler.source>
         <maven.compiler.target>8</maven.compiler.target>
